config/instances/manuela-acm-aggregator/hub/prometheus-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus
spec:
  host: prometheus-manuela-acm-aggregator.apps.ocp3.stormshift.coe.muc.redhat.com
  port:
    targetPort: web
  to:
    kind: Service
    name: prometheus-operated
    weight: 100
  wildcardPolicy: None
