config/instances/manuela-acm-aggregator/hub/pushprox-proxy-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pushprox-proxy
spec:
  host: pushprox-proxy-manuela-acm-aggregator.apps.ocp3.stormshift.coe.muc.redhat.com
